--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,10 @@ header{
     display: none;
 }
 
+.carrossel-size img{
+    width: 100%;
+}
+
 .banner-ativo{
     display: flex;
 }
@@ -204,6 +208,10 @@ footer img{
 
     .secao-pagamento div{
         width: 80%;
+    }
+
+    .banner{
+        width: 100%;
     }
 }
 
